src/objects/inscor__Consignor_Payable__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Consignor Payables</relationshipLabel>
        <relationshipName>Consignor_Payables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Consignor_Due__c</fullName>
        <formula>inscor__Total_Consignor_Payable__c -  inscor__Total_Adjustments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consignor Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Consignor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consignor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Consignor Payables</relationshipLabel>
        <relationshipName>Consignor_Payables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Payable_Name__c</fullName>
        <label>Payable Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Processed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Processed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Consignor_Payables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_of_Adjustment_Lines__c</fullName>
        <label>Quantity of Adjustment Lines</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_of_Sales_Lines__c</fullName>
        <label>Quantity of Sales Lines</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                    <isActive>false</isActive>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <isActive>false</isActive>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                    <isActive>false</isActive>
                    <label>Submitted</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Total_Adjustments__c</fullName>
        <label>Total Adjustments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Consignor_Payable__c</fullName>
        <label>Total Consignor Payable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Price__c</fullName>
        <label>Total Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Consignor Payable</label>
    <listViews>
        <fullName>inscor__All_Consignor_Payables</fullName>
        <columns>NAME</columns>
        <columns>inscor__Payable_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>inscor__Total_Price__c</columns>
        <columns>inscor__Status__c</columns>
        <columns>inscor__Quantity_of_Sales_Lines__c</columns>
        <columns>inscor__Quantity_of_Adjustment_Lines__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Consignor Payables</label>
    </listViews>
    <nameField>
        <displayFormat>CNS-{000000}</displayFormat>
        <label>Consignor Payable Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consignor Payables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>